# saturn-crates

./: Cargo.toml  LICENSE.md  README.md
examples/escrow/: Cargo.toml
examples/escrow/src/: error.rs  lib.rs
examples/escrow/src/instructions/: create_escrow.rs  mod.rs
examples/liquidity/: Cargo.toml
saturn-account-discriminator-derive/: Cargo.toml
saturn-account-discriminator-derive/src/: lib.rs
saturn-account-macros/: Cargo.toml
saturn-account-macros/src/: codegen.rs  lib.rs  model.rs  parser.rs  parser_tests.rs  validator.rs  validator_tests.rs
saturn-account-macros/src/codegen/: fixed_slice.rs  orchestrator.rs  shards.rs  single.rs  utils.rs
saturn-account-macros/src/codegen/snapshots/: saturn_account_macros__codegen__orchestrator__tests__snapshot_orchestrator_simple.snap.new
saturn-account-macros/src/parser/: attr_ast.rs  defaults.rs  helpers.rs
saturn-account-macros/src/validator/: bump.rs  ctx.rs  rules.rs  syntax.rs
saturn-account-macros/tests/: derive_accounts.rs
saturn-account-macros/tests/compile_fail/: contradictory_flags.rs  contradictory_flags.stderr  duplicate_boolean_flags.rs  duplicate_boolean_flags.stderr  init_without_payer.rs  init_without_payer.stderr  init_without_program_id.rs  init_without_program_id.stderr  len_on_single.rs  len_on_single.stderr  missing_info_lifetime.rs  missing_info_lifetime.stderr  program_id_without_seeds.rs  program_id_without_seeds.stderr  realloc_pda_with_signer.rs  realloc_pda_with_signer.stderr  realloc_with_init.rs  realloc_with_init.stderr  realloc_without_payer.rs  realloc_without_payer.stderr  realloc_without_space.rs  realloc_without_space.stderr  ref_slice_without_len.rs  ref_slice_without_len.stderr  seeds_without_program_id.rs  seeds_without_program_id.stderr  zero_copy_plain_type.rs  zero_copy_plain_type.stderr  zero_copy_type_mismatch.rs  zero_copy_type_mismatch.stderr  zero_copy_without_init.rs  zero_copy_without_init.stderr
saturn-account-macros/tests/pass/: basic.rs  bump_array.rs  combo.rs  dynamic_len.rs  dynamic_space.rs  generic.rs  init_default_program_id.rs  init_if_needed.rs  multi_init.rs  realloc.rs  realloc_no_payer.rs  realloc_shards.rs  seeds_default_program_id.rs  shards.rs
saturn-account-macros/tests/ui/: basic.rs
saturn-account-parser/: Cargo.toml
saturn-account-parser/src/: error.rs  lib.rs  to_account_info.rs  tx_builder.rs
saturn-account-parser/src/codec/: borsh.rs  mod.rs  zero_copy.rs
saturn-account-shards/: Cargo.toml
saturn-account-shards-derive/: Cargo.toml  README.md
saturn-account-shards-derive/src/: args.rs  lib.rs  struct_info.rs  utils.rs  validate.rs
saturn-account-shards-derive/src/expand/: mod.rs  shard_account.rs  state_shard.rs
saturn-account-shards-derive/tests/: basic_functionality.rs  common.rs  complex.rs  custom_fields.rs  edge_cases.rs  integration.rs  integration_tests.rs  memory_layout.rs  rune_functionality.rs  shard_set_integration.rs
saturn-account-shards-derive/tests/compile_fail/: missing_repr.rs  missing_repr.stderr
saturn-account-shards-derive/tests/pass/: shard_account.rs
saturn-account-shards/src/: common_loader.rs  error.rs  lib.rs  prelude.rs  shard.rs  shard_handle.rs  shard_set.rs  split.rs  update.rs  utxo_macros.rs
saturn-bitcoin-transactions/: Cargo.toml
saturn-bitcoin-transactions/src/: arch.rs  calc_fee.rs  consolidation.rs  error.rs  input_calc.rs  lib.rs  mempool.rs  serde.rs  util.rs  utxo_info.rs  utxo_info_json.rs
saturn-collections/: README.md
saturn-collections/src/: lib.rs
saturn-error/: Cargo.toml
saturn-error-derive/: Cargo.toml  README.md
saturn-error-derive/src/: lib.rs
saturn-error/src/: lib.rs
saturn-error/tests/: macro_tests.rs
saturn-program-macros/: Cargo.toml
saturn-program-macros/src/: lib.rs
saturn-program-macros/src/program/: analysis.rs  attr.rs  dispatcher.rs  id.rs  mod.rs
saturn-program-macros/src/program/analysis/: dup_check.rs  gather.rs  helpers.rs  mod.rs  parse.rs  transform.rs
saturn-program-macros/tests/: expand_program.rs
saturn-program-macros/tests/compile_fail/: btc_tx_cfg_conflicting_rune_keys.rs  btc_tx_cfg_conflicting_rune_keys.stderr  btc_tx_cfg_missing_fields.rs  btc_tx_cfg_missing_fields.stderr  btc_tx_cfg_missing_max_inputs.rs  btc_tx_cfg_missing_max_inputs.stderr  btc_tx_cfg_non_literal_rune_capacity.rs  btc_tx_cfg_non_literal_rune_capacity.stderr  btc_tx_cfg_without_flag.rs  btc_tx_cfg_without_flag.stderr  btc_tx_cfg_wrong_literal_types.rs  btc_tx_cfg_wrong_literal_types.stderr  duplicate_bitcoin_transaction_key.rs  duplicate_bitcoin_transaction_key.stderr  duplicate_btc_tx_cfg_section.rs  duplicate_btc_tx_cfg_section.stderr  duplicate_instruction_key.rs  duplicate_instruction_key.stderr  duplicate_variant.rs  duplicate_variant.stderr  duplicate_variant_nested.rs  duplicate_variant_nested.stderr  first_arg_incorrect.rs  first_arg_incorrect.stderr  instruction_path_not_namespaced.rs  instruction_path_not_namespaced.stderr  missing_btc_tx_cfg.rs  missing_btc_tx_cfg.stderr  missing_instruction.rs  missing_instruction.stderr  missing_instruction_key.rs  missing_instruction_key.stderr  missing_program_id.rs  missing_program_id.stderr  nested_modules.rs  nested_modules.stderr  private_handler.rs  private_handler.stderr  rune_set_wrong_type.rs  rune_set_wrong_type.stderr  (+4 more)
saturn-program-macros/tests/pass/: basic.rs  bitcoin_tx.rs  btc_tx_defaults.rs  btc_tx_rune_capacity.rs  context_rewrite.rs  declare_id.rs  multi_handler.rs  nested_modules.rs  utxo_accounts_integration.rs
saturn-utxo-parser/: Cargo.toml
saturn-utxo-parser-derive/: Cargo.toml
saturn-utxo-parser-derive/src/: ir.rs  lib.rs  lib_old.rs  parse.rs  tests.rs  validate.rs
saturn-utxo-parser-derive/src/codegen/: extractors.rs  mod.rs  predicate.rs
saturn-utxo-parser-derive/tests/: anchor_rune_tests.rs  array_tests.rs  integration_tests.rs  rune_id_amount_tests.rs  rune_presence_tests.rs
saturn-utxo-parser-derive/tests/compile_fail/: duplicate_anchor.rs  duplicate_anchor.stderr  missing_anchor.rs  missing_anchor.stderr
saturn-utxo-parser/src/: error.rs  lib.rs
(+14 files in other folders)
