[package]
name = "saturn-program-macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
convert_case = "0.6"

[dev-dependencies]
trybuild = { workspace = true } 
arch_program = { workspace = true }
saturn-account-macros = { workspace = true }
saturn-account-parser = { workspace = true }
saturn-bitcoin-transactions = { workspace = true }
saturn-collections = { workspace = true }
borsh = { workspace = true }
saturn-utxo-parser = { workspace = true } 