[package]
name = "saturn-utxo-parser-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
arch_program = { workspace = true }
saturn-bitcoin-transactions = { workspace = true }
saturn-utxo-parser = { workspace = true }
saturn-account-parser = { workspace = true }
trybuild = { workspace = true }